--- a/HomeworkProject05/PhoneNumberCrawler/MainWindow.xaml
+++ b/HomeworkProject05/PhoneNumberCrawler/MainWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<ui:UiWindow
     x:Class="PhoneNumberCrawler.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:PhoneNumberCrawler"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="BingSearchPhoneNumberCrawler"
     Width="800"
     Height="450"
@@ -27,7 +27,21 @@
             <Setter Property="Foreground" Value="{ui:ThemeResource TextFillColorPrimaryBrush}" />
         </Style>
         <Style
-            x:Key="OptionText"
+            x:Key="BorderLessTransparentUiButtonStyle"
+            BasedOn="{StaticResource {x:Type ui:Button}}"
+            TargetType="ui:Button">
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Background" Value="Transparent" />
+        </Style>
+        <Style
+            x:Key="BorderLessSquareUiButtonStyle"
+            BasedOn="{StaticResource BorderLessTransparentUiButtonStyle}"
+            TargetType="ui:Button">
+            <Setter Property="MinHeight" Value="{Binding RelativeSource={RelativeSource Self}, Path=ActualWidth}" />
+            <Setter Property="MinWidth" Value="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}" />
+        </Style>
+        <Style
+            x:Key="OptionTextStyle"
             BasedOn="{StaticResource {x:Type TextBlock}}"
             TargetType="TextBlock">
             <Setter Property="Margin" Value="0,10,0,0" />
@@ -50,14 +64,6 @@
             <Setter Property="Padding" Value="5,0" />
             <Setter Property="FontSize" Value="{StaticResource SmallFontSize}" />
             <Setter Property="IsOpen" Value="True" />
-        </Style>
-        <Style
-            x:Key="TitleBarButtonStyle"
-            BasedOn="{StaticResource {x:Type ui:Button}}"
-            TargetType="ui:Button">
-            <Setter Property="BorderThickness" Value="0" />
-            <Setter Property="Height" Value="{Binding Width, RelativeSource={RelativeSource Mode=Self}}" />
-            <Setter Property="Background" Value="Transparent" />
         </Style>
     </Window.Resources>
     <Grid>
@@ -84,19 +90,19 @@
                     Click="OnMinimizeButtonClick"
                     Icon="LineHorizontal120"
                     MouseOverBackground="#55FFFFFF"
-                    Style="{StaticResource TitleBarButtonStyle}" />
+                    Style="{StaticResource BorderLessTransparentUiButtonStyle}" />
                 <ui:Button
                     x:Name="MaximizeButton"
                     Click="OnMaximizeButtonClick"
                     Icon="Maximize24"
                     MouseOverBackground="#55FFFFFF"
-                    Style="{StaticResource TitleBarButtonStyle}" />
+                    Style="{StaticResource BorderLessTransparentUiButtonStyle}" />
                 <ui:Button
                     x:Name="CloseButton"
                     Click="OnCloseButtonClick"
                     Icon="Dismiss24"
                     MouseOverBackground="#F25022"
-                    Style="{StaticResource TitleBarButtonStyle}" />
+                    Style="{StaticResource BorderLessTransparentUiButtonStyle}" />
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
@@ -107,53 +113,56 @@
             <Border
                 x:Name="OptionsPanel"
                 Width="0"
-                Padding="20"
-                d:Width="300">
+                Padding="5"
+                d:Width="300"
+                Background="{ui:ThemeResource ControlOnImageFillColorDefaultBrush}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock
-                            d:Foreground="Black"
-                            FontSize="{StaticResource LargeFontSize}"
-                            Text="选项" />
-                        <TextBlock
-                            d:Foreground="Black"
-                            Style="{StaticResource OptionText}"
-                            Text="目标电话号码数" />
-                        <ui:NumberBox
-                            Icon="Phone24"
-                            Style="{StaticResource CountNumberBoxStyle}"
-                            Text="100"
-                            ValidationMode="InvalidInputOverwritten" />
-                        <ui:InfoBar Message="应在[1,999]范围内" Style="{StaticResource OptionInfoBarStyle}" />
-                        <TextBlock
-                            d:Foreground="Black"
-                            Style="{StaticResource OptionText}"
-                            Text="最大URL数" />
-                        <ui:NumberBox
-                            Icon="CloudLink24"
-                            LargeChange="10000"
-                            SmallChange="1"
-                            Style="{StaticResource CountNumberBoxStyle}"
-                            Text="100000"
-                            ValidationMode="InvalidInputOverwritten" />
-                        <ui:InfoBar Message="应在[1,999,999]范围内" Style="{StaticResource OptionInfoBarStyle}" />
-                    </StackPanel>
+                    <Border Padding="20">
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock
+                                d:Foreground="Black"
+                                FontSize="{StaticResource LargeFontSize}"
+                                Text="选项" />
+                            <TextBlock
+                                d:Foreground="Black"
+                                Style="{StaticResource OptionTextStyle}"
+                                Text="目标电话号码数" />
+                            <ui:NumberBox
+                                Icon="Phone24"
+                                Style="{StaticResource CountNumberBoxStyle}"
+                                Text="100"
+                                ValidationMode="InvalidInputOverwritten" />
+                            <ui:InfoBar Message="应在[1,999]范围内" Style="{StaticResource OptionInfoBarStyle}" />
+                            <TextBlock
+                                d:Foreground="Black"
+                                Style="{StaticResource OptionTextStyle}"
+                                Text="最大URL数" />
+                            <ui:NumberBox
+                                Icon="CloudLink24"
+                                LargeChange="10000"
+                                SmallChange="1"
+                                Style="{StaticResource CountNumberBoxStyle}"
+                                Text="100000"
+                                ValidationMode="InvalidInputOverwritten" />
+                            <ui:InfoBar Message="应在[1,999,999]范围内" Style="{StaticResource OptionInfoBarStyle}" />
+                        </StackPanel>
+                    </Border>
+
                     <ui:Button
                         x:Name="ThemeButton"
                         Grid.Row="1"
+                        HorizontalAlignment="Right"
                         Click="OnThemeToggleButtonClick"
-                        FontSize="{StaticResource MediumFontSize}"
-                        Icon="WeatherMoon24" />
+                        FontSize="{StaticResource LargeFontSize}"
+                        Icon="WeatherMoon24"
+                        Style="{StaticResource BorderLessSquareUiButtonStyle}" />
                 </Grid>
             </Border>
-            <Border
-                Grid.Column="1"
-                Padding="10"
-                Background="{ui:ThemeResource ControlOnImageFillColorDefaultBrush}">
+            <Border Grid.Column="1" Padding="10">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -161,12 +170,10 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <ui:Button
-                        Width="39"
-                        Height="{Binding Width, RelativeSource={RelativeSource Mode=Self}}"
-                        BorderThickness="0"
                         Click="OnExpandButtonClicked"
-                        FontSize="{StaticResource MediumFontSize}"
-                        Icon="LineHorizontal320" />
+                        FontSize="{StaticResource LargeFontSize}"
+                        Icon="LineHorizontal320"
+                        Style="{StaticResource BorderLessSquareUiButtonStyle}" />
                     <StackPanel
                         Grid.Row="1"
                         Margin="0,78,0,0"
@@ -187,6 +194,7 @@
                         </StackPanel>
                         <Grid Margin="100,20">
                             <ui:TextBox
+                                Padding="10,10,40,10"
                                 ClearButtonEnabled="False"
                                 Icon="Search24"
                                 PlaceholderText="搜索网页" />
